--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-intro",
+  "name": "sorting-hat-webpack-3",
   "version": "1.0.0",
   "description": "",
   "main": "src/javascripts/main.js",
